- Ogg loader: provide audio using the host endianness (bug #5187)
- Ogg loader: fixed ov_time_seek() signature for libvorbisidec
- Ogg loader: fixed seek with tremor (libvorbisidec) (bug #1807)
- WAV loader: fixed double free in LoadWAVStream (bug #2604)
- WAV loader: fixed possible memory overflow in Mix_LoadWAV_RW
  (bug #2670)
- MOD loader (mikmod): fixed failing to load XM modules (bug #4107)
- MOD loader (mikmod): fixed malloc/free mismatches
- Midi (timidity): fixed possible stack corruption during config read
  (bugs #2872, #2966)
- Midi (timidity): fixed stack smashing during file play (bug #1905)
- Midi (timidity): fixed possible file pointer leak during config read
  (bug #2968)
- Midi (timidity): fixed a coding mistake in recompute_amp (bug #2969)
- Native Midi: fixed memory leak in MIDItoStream() (bug #3072)
- Native Midi (macosx): make sure to set music player's sequence to
  NULL before disposing music sequence (bug #4573)
- Native Midi (macosx): use newer apis with newer macOS (bug #1566)
- Native Midi (macosx): set volume before start playing (bug #5356)
- Native Midi (windows): fixed possible crash.
- Midi (fluidsyth): fixed loading MIDI music leaks memory (bug #3018)
- Midi (fluidsyth): fixed calling Mix_Quit twice leading to segfault
  (bug #2004)
- Midi (fluidsyth): fixed no sf2 soundfonts loaded by default (debian
  bug #715461)
- Soundfont api functions are public and should always be available
  (bugs #3071, #3088)
- Music: fixed Mix_PlayMusic broken logic when loop > 1 (bug #2706)
- Music: fixed Mix_PlayMusic can't start playing when previous music
  was paused (bug #4216)
- Music: call Mix_HookMusicFinished when Mix_HaltMusic is called
  (bug #1610)
- Music: fixed memory leak issue in Mix_LoadMUSType_RW (bug #1833)
- Music, cmd player: added missing NULL check (bug #2970)
- Mixer: fixed looping behavior and Mix_Playing() result for looping
  channels
- Mixer: fixed Mix_FadeOutChannel never setting fade_volume_reset
  (bug #4770)